force-app/main/default/objects/ID_UnifiedAPI_Landing__c/ID_UnifiedAPI_Landing__c.object-meta.xml
<CustomObject>
    <label>ID UnifiedAPI Landing</label>
    <nameField>
        <label>ID UnifiedAPI Landing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID UnifiedAPI Landings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>