force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/addr_unitno__c.field-meta.xml
<CustomField>
    <fullName>addr_unitno__c</fullName>
    <label>Address Unit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>