force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/br_current_brand_id__c.field-meta.xml
<CustomField>
    <fullName>br_current_brand_id__c</fullName>
    <label>BR Current Brand ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>