force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/br_field_from_web_form__c.field-meta.xml
<CustomField>
    <fullName>br_field_from_web_form__c</fullName>
    <label>BR field from web form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>