force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/child_firstname__c.field-meta.xml
<CustomField>
    <fullName>child_firstname__c</fullName>
    <label>Child Firstname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>