force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/child_lastname__c.field-meta.xml
<CustomField>
    <fullName>child_lastname__c</fullName>
    <label>Child Lastname</label>
    <length>100</length>
    <type>Text</type>
</CustomField>