force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_child_weight_result__c.field-meta.xml
<CustomField>
    <fullName>contact_child_weight_result__c</fullName>
    <label>Contact Child Weight Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>