force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_do_not_call__c.field-meta.xml
<CustomField>
    <fullName>contact_do_not_call__c</fullName>
    <label>Contact do not call</label>
    <length>100</length>
    <type>Text</type>
</CustomField>