force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_family_diabetic__c.field-meta.xml
<CustomField>
    <fullName>contact_family_diabetic__c</fullName>
    <label>Contact Family Diabetic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>