force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_gender__c.field-meta.xml
<CustomField>
    <fullName>contact_gender__c</fullName>
    <label>Contact Gender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>