force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_homephone__c.field-meta.xml
<CustomField>
    <fullName>contact_homephone__c</fullName>
    <label>Contact homephone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>