force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_master_opt_out__c.field-meta.xml
<CustomField>
    <fullName>contact_master_opt_out__c</fullName>
    <label>Contact Master Opt Out</label>
    <length>100</length>
    <type>Text</type>
</CustomField>