force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_newsletter_consent__c.field-meta.xml
<CustomField>
    <fullName>contact_newsletter_consent__c</fullName>
    <label>Contact Newsletter Consent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>