force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_otherphone__c.field-meta.xml
<CustomField>
    <fullName>contact_otherphone__c</fullName>
    <label>Contact otherphone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>