force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_source_uuid__c.field-meta.xml
<CustomField>
    <fullName>contact_source_uuid__c</fullName>
    <label>Contact Source uuid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>