force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_user_type__c.field-meta.xml
<CustomField>
    <fullName>contact_user_type__c</fullName>
    <label>Contact User Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>