force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/contact_weight__c.field-meta.xml
<CustomField>
    <fullName>contact_weight__c</fullName>
    <label>Contact Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>