force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/cr_campaignname__c.field-meta.xml
<CustomField>
    <fullName>cr_campaignname__c</fullName>
    <label>CR Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>