force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/cr_created_at__c.field-meta.xml
<CustomField>
    <fullName>cr_created_at__c</fullName>
    <label>CR created at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>