force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/cr_fielddieticianid__c.field-meta.xml
<CustomField>
    <fullName>cr_fielddieticianid__c</fullName>
    <label>CR fielddieticianid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>