force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/cr_utmsource__c.field-meta.xml
<CustomField>
    <fullName>cr_utmsource__c</fullName>
    <label>CR UTM Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>