force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/error_value__c.field-meta.xml
<CustomField>
    <fullName>error_value__c</fullName>
    <label>Error Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>