force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/household_external_reference_number__c.field-meta.xml
<CustomField>
    <fullName>household_external_reference_number__c</fullName>
    <label>Household External Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>