force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/nh_duration_supplement__c.field-meta.xml
<CustomField>
    <fullName>nh_duration_supplement__c</fullName>
    <label>NH Duration Supplement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>