force-app/main/default/objects/ID_UnifiedAPI_Landing__c/fields/nh_under_weight__c.field-meta.xml
<CustomField>
    <fullName>nh_under_weight__c</fullName>
    <label>NH Under Weight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>